--- a/splitemapp-android/res/layout/fragment_create_project.xml
+++ b/splitemapp-android/res/layout/fragment_create_project.xml
@@ -1,88 +1,118 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical" >
+    android:fitsSystemWindows="true" >
 
-    <LinearLayout
-        android:id="@+id/cp_linearLayout"
-        style="@style/NoActionBarTheme"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/cp_appBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="155dp"
+        android:fitsSystemWindows="true" >
+
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            android:background="@color/seablue"
+            android:fitsSystemWindows="true"
+            app:contentScrim="@color/seablue"
+            app:expandedTitleMarginBottom="32dp"
+            app:expandedTitleMarginEnd="64dp"
+            app:expandedTitleMarginStart="48dp" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="45dp"
+                app:layout_collapseMode="parallax"
+                android:orientation="vertical" >
+
+                <TextView
+                    style="@style/WhiteCustomTextView"
+                    android:text="@string/cp_project_name" />
+
+                <EditText
+                    android:id="@+id/cp_project_name_editText"
+                    style="@style/BlueCustomEditText"
+                    android:inputType="text" />
+
+                <View style="@style/WhiteBottomLine" />
+            </LinearLayout>
+
+            <include layout="@layout/blue_toolbar" />
+        </android.support.design.widget.CollapsingToolbarLayout>
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/scrollableview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:orientation="vertical" >
+        android:layout_gravity="fill_vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:background="@color/white" >
 
-        <include layout="@layout/blue_toolbar" />
-
-        <View
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:background="@drawable/toolbar_dropshadow" />
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
 
-        <TextView
-            style="@style/CustomTextView"
-            android:text="@string/cp_project_name" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="5dp"
+                android:background="@drawable/toolbar_dropshadow" />
 
-        <EditText
-            android:id="@+id/cp_project_name_editText"
-            style="@style/CustomEditText"
-            android:inputType="text" />
+            <TextView
+                style="@style/CustomTextView"
+                android:text="@string/cp_project_type" />
 
-        <View style="@style/BottomLine" />
+            <Spinner
+                android:id="@+id/cp_project_type_spinner"
+                style="@style/CreateProjectSpinner" />
 
-        <TextView
-            style="@style/CustomTextView"
-            android:text="@string/cp_project_type" />
+            <View style="@style/BottomLine" />
 
-        <Spinner
-            android:id="@+id/cp_project_type_spinner"
-            style="@style/CreateProjectSpinner" />
+            <TextView
+                style="@style/CustomTextView"
+                android:text="@string/cp_project_budget" />
 
-        <View style="@style/BottomLine" />
+            <EditText
+                android:id="@+id/cp_budget_editText"
+                style="@style/CustomEditText"
+                android:drawableLeft="@drawable/dollar_sign"
+                android:drawablePadding="5dp"
+                android:drawableStart="@drawable/dollar_sign"
+                android:inputType="numberDecimal"
+                android:text="@string/cp_project_budget_value" />
 
-        <TextView
-            style="@style/CustomTextView"
-            android:text="@string/cp_project_budget" />
+            <View style="@style/BottomLine" />
 
-        <EditText
-            android:id="@+id/cp_budget_editText"
-            style="@style/CustomEditText"
-            android:drawableLeft="@drawable/dollar_sign"
-            android:drawablePadding="5dp"
-            android:drawableStart="@drawable/dollar_sign"
-            android:inputType="numberDecimal"
-            android:text="@string/cp_project_budget_value" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
 
-        <View style="@style/BottomLine" />
+            <TextView
+                android:id="@+id/cp_project_members_textView"
+                style="@style/CustomTextView"
+                android:background="@color/grey"
+                android:text="@string/cp_project_members_list"
+                android:textColor="@color/hard_grey" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="10dp" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/cp_project_members_textView"
-        style="@style/CustomTextView"
-        android:layout_below="@id/cp_linearLayout"
-        android:background="@color/grey"
-        android:text="@string/cp_project_members_list"
-        android:textColor="@color/hard_grey" />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/cp_users_recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/cp_project_members_textView" />
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/cp_users_recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/cp_fab"
         style="@style/MainFAB"
-        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom|end"
         app:backgroundTint="@color/fabblue"
         app:borderWidth="0dp"
         app:elevation="6dp"
         app:fabSize="normal"
         app:pressedTranslationZ="12dp" />
 
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
