--- a/splitemapp-android/res/layout/fragment_create_project.xml
+++ b/splitemapp-android/res/layout/fragment_create_project.xml
@@ -7,7 +7,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/cp_appBarLayout"
         android:layout_width="match_parent"
-        android:layout_height="155dp"
+        android:layout_height="wrap_content"
         android:fitsSystemWindows="true" >
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -25,7 +25,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="45dp"
-                app:layout_collapseMode="parallax"
                 android:orientation="vertical" >
 
                 <TextView
@@ -37,78 +36,75 @@
                     style="@style/BlueCustomEditText"
                     android:inputType="text" />
 
-                <View style="@style/WhiteBottomLine" />
+                <View
+                    style="@style/WhiteBottomLine"
+                    android:layout_marginBottom="10dp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/white"
+                    android:orientation="vertical" >
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="5dp"
+                        android:background="@drawable/toolbar_dropshadow" />
+
+                    <TextView
+                        style="@style/CustomTextView"
+                        android:text="@string/cp_project_type" />
+
+                    <Spinner
+                        android:id="@+id/cp_project_type_spinner"
+                        style="@style/CreateProjectSpinner" />
+
+                    <View style="@style/BottomLine" />
+
+                    <TextView
+                        style="@style/CustomTextView"
+                        android:text="@string/cp_project_budget" />
+
+                    <EditText
+                        android:id="@+id/cp_budget_editText"
+                        style="@style/CustomEditText"
+                        android:drawableLeft="@drawable/dollar_sign"
+                        android:drawablePadding="5dp"
+                        android:drawableStart="@drawable/dollar_sign"
+                        android:inputType="numberDecimal"
+                        android:text="@string/cp_project_budget_value" />
+
+                    <View style="@style/BottomLine" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="10dp" />
+
+                    <TextView
+                        android:id="@+id/cp_project_members_textView"
+                        style="@style/CustomTextView"
+                        android:background="@color/grey"
+                        android:text="@string/cp_project_members_list"
+                        android:textColor="@color/hard_grey" />
+                </LinearLayout>
             </LinearLayout>
 
             <include layout="@layout/blue_toolbar" />
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.widget.NestedScrollView
-        android:id="@+id/scrollableview"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/cp_users_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="fill_vertical"
+        android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:background="@color/white" >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical" >
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="5dp"
-                android:background="@drawable/toolbar_dropshadow" />
-
-            <TextView
-                style="@style/CustomTextView"
-                android:text="@string/cp_project_type" />
-
-            <Spinner
-                android:id="@+id/cp_project_type_spinner"
-                style="@style/CreateProjectSpinner" />
-
-            <View style="@style/BottomLine" />
-
-            <TextView
-                style="@style/CustomTextView"
-                android:text="@string/cp_project_budget" />
-
-            <EditText
-                android:id="@+id/cp_budget_editText"
-                style="@style/CustomEditText"
-                android:drawableLeft="@drawable/dollar_sign"
-                android:drawablePadding="5dp"
-                android:drawableStart="@drawable/dollar_sign"
-                android:inputType="numberDecimal"
-                android:text="@string/cp_project_budget_value" />
-
-            <View style="@style/BottomLine" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="10dp" />
-
-            <TextView
-                android:id="@+id/cp_project_members_textView"
-                style="@style/CustomTextView"
-                android:background="@color/grey"
-                android:text="@string/cp_project_members_list"
-                android:textColor="@color/hard_grey" />
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/cp_users_recyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+        android:background="@color/white" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/cp_fab"
         style="@style/MainFAB"
-        android:layout_gravity="bottom|end"
+        app:layout_anchor="@id/cp_users_recyclerView"
+        app:layout_anchorGravity="bottom|right|end"
         app:backgroundTint="@color/fabblue"
         app:borderWidth="0dp"
         app:elevation="6dp"
