SPLITEMAPP-41 Implementing Swipe-To-Refresh in Home and Project fragments

--- a/splitemapp-android/res/layout/fragment_home.xml
+++ b/splitemapp-android/res/layout/fragment_home.xml
@@ -1,6 +1,7 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/NoActionBarTheme"
+    android:id="@+id/h_drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white" >
@@ -55,13 +56,13 @@
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/h_swipe_refresh"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:layout_below="@id/h_topLayout" >
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/h_projects_recyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/h_topLayout" />
+                android:layout_height="wrap_content" />
         </android.support.v4.widget.SwipeRefreshLayout>
 
         <TextView
