--- a/splitemapp-android/res/layout/list_item_manage_contact.xml
+++ b/splitemapp-android/res/layout/list_item_manage_contact.xml
@@ -6,12 +6,13 @@
     
     <ImageView
         android:id="@+id/mc_user_avatar"
-        android:layout_centerVertical="true"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:contentDescription="@string/mc_avatar_description"/>
+        android:layout_centerVertical="true"
+        android:contentDescription="@string/mc_avatar_description"
+        android:src="@drawable/avatar_placeholder" />
 
     <TextView
         android:id="@+id/mc_user_full_name"
