--- a/splitemapp-android/res/layout/fragment_expense.xml
+++ b/splitemapp-android/res/layout/fragment_expense.xml
@@ -7,15 +7,15 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/e_appBarLayout"
         android:layout_width="match_parent"
-        android:layout_height="155dp"
+        android:layout_height="wrap_content"
         android:fitsSystemWindows="true" >
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            android:fitsSystemWindows="true"
             android:background="@color/seablue"
+            android:fitsSystemWindows="true"
             app:contentScrim="@color/seablue"
             app:expandedTitleMarginBottom="32dp"
             app:expandedTitleMarginEnd="64dp"
@@ -25,7 +25,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="45dp"
-                app:layout_collapseMode="parallax"
                 android:orientation="vertical" >
 
                 <TextView
@@ -39,55 +38,45 @@
                     android:drawableStart="@drawable/ic_money_white_18dp"
                     android:inputType="numberDecimal" />
 
-                <View style="@style/WhiteBottomLine" />
+                <View
+                    style="@style/WhiteBottomLine"
+                    android:layout_marginBottom="10dp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/white"
+                    android:orientation="vertical" >
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="5dp"
+                        android:background="@drawable/toolbar_dropshadow" />
+
+                    <TextView
+                        android:id="@+id/e_expense_date_textView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginTop="10dp"
+                        android:drawableEnd="@drawable/greater_sign"
+                        android:drawableRight="@drawable/greater_sign"
+                        android:gravity="center"
+                        android:padding="5dp"
+                        android:textColor="@color/black"
+                        android:textSize="23sp" />
+                </LinearLayout>
             </LinearLayout>
 
             <include layout="@layout/blue_toolbar" />
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.widget.NestedScrollView
-        android:id="@+id/scrollableview"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/e_expense_categories_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="fill_vertical"
+        android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:background="@color/white" >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical" >
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="5dp"
-                android:background="@drawable/toolbar_dropshadow" />
-
-            <TextView
-                android:id="@+id/e_expense_date_textView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:background="@color/white"
-                android:drawableEnd="@drawable/greater_sign"
-                android:drawableRight="@drawable/greater_sign"
-                android:gravity="center"
-                android:padding="5dp"
-                android:textColor="@color/black"
-                android:textSize="23sp" />
-
-            <GridView
-                android:id="@+id/e_expense_categories_gridView"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:background="@color/hard_grey"
-                android:horizontalSpacing="2dp"
-                android:numColumns="3"
-                android:verticalSpacing="2dp" >
-            </GridView>
-        </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+        android:background="@color/white" />
 
 </android.support.design.widget.CoordinatorLayout>
