--- a/splitemapp-android/res/layout/list_item_user_expense.xml
+++ b/splitemapp-android/res/layout/list_item_user_expense.xml
@@ -18,8 +18,6 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
             android:contentDescription="@string/ue_icon_description"
             android:padding="5dp"
             android:src="@drawable/category_placeholder" />
@@ -29,6 +27,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
             android:layout_toEndOf="@id/ue_icon_imageView"
             android:layout_toRightOf="@id/ue_icon_imageView"
             android:text="@string/ue_category_placeholder"
@@ -39,9 +39,9 @@
             android:id="@+id/ue_date_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/ue_category_textView"
+            android:layout_alignStart="@id/ue_category_textView"
             android:layout_below="@id/ue_category_textView"
-            android:layout_toEndOf="@id/ue_icon_imageView"
-            android:layout_toRightOf="@id/ue_icon_imageView"
             android:text="@string/ue_date_placeholder"
             android:textColor="@color/grey"
             android:textSize="12sp" />
@@ -49,9 +49,9 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
+            android:layout_alignLeft="@id/ue_category_textView"
+            android:layout_alignStart="@id/ue_category_textView"
             android:layout_below="@id/ue_date_textView"
-            android:layout_toEndOf="@id/ue_icon_imageView"
-            android:layout_toRightOf="@id/ue_icon_imageView"
             android:background="@color/grey" />
 
         <TextView
