SPLITEMAPP-49 Modifying layouts so that they show when item was pressed. Modifying buttons so they show feedback when pressed. There is an issue in the Expense fragment when selecting another category. The first category set is still set. We still need to set the selected row in the drawer view (home screen)

--- a/splitemapp-android/res/drawable-xhdpi/button_rounded_corners_normal.xml
+++ b/splitemapp-android/res/drawable-xhdpi/button_rounded_corners_normal.xml
@@ -3,9 +3,8 @@
 
     <corners android:radius="3dp" />
 
-    <solid
-        android:color="@color/seablue" />
-    
+    <solid android:color="@color/seablue" />
+
     <stroke
         android:width="5px"
         android:color="@color/seablue" />
