--- a/splitemapp-android/res/layout/list_item_contact.xml
+++ b/splitemapp-android/res/layout/list_item_contact.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="@color/white"
+    android:background="@drawable/recycler_color_selector"
     android:id="@+id/ap_parentView" >
     
     <TextView
