--- a/splitemapp-android/res/layout/list_item_project.xml
+++ b/splitemapp-android/res/layout/list_item_project.xml
@@ -1,7 +1,7 @@
 <com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/h_swipeLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res/com.splitemapp.android">
 
     <!-- A LinearLayout containing the bottom view with actions -->
 
@@ -12,7 +12,7 @@
         android:layout_gravity="end"
         android:background="@color/grey"
         android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:orientation="horizontal" >
 
         <ImageView
             android:id="@+id/h_action_edit_imageView"
@@ -43,6 +43,9 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?selectableItemBackground"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="0dp"
         app:cardElevation="0dp" >
