--- a/splitemapp-android/res/layout/list_item_user.xml
+++ b/splitemapp-android/res/layout/list_item_user.xml
@@ -2,7 +2,7 @@
     style="@style/Theme.AppCompat"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="@drawable/recycler_color_selector"
     android:orientation="horizontal" >
 
     <ImageView
