--- a/splitemapp-android/res/layout/list_item_user_expense.xml
+++ b/splitemapp-android/res/layout/list_item_user_expense.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/user_expense_height"
+    android:foreground="?selectableItemBackground"
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="0dp"
     app:cardElevation="0dp" >
@@ -26,9 +27,9 @@
             android:id="@+id/ue_category_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:layout_marginLeft="5dp"
             android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
             android:layout_toEndOf="@id/ue_icon_imageView"
             android:layout_toRightOf="@id/ue_icon_imageView"
             android:text="@string/ue_category_placeholder"
