--- a/splitemapp-android/res/layout/fragment_home.xml
+++ b/splitemapp-android/res/layout/fragment_home.xml
@@ -1,7 +1,7 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/NoActionBarTheme"
     android:id="@+id/h_drawerLayout"
+    style="@style/NoActionBarTheme"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white" >
@@ -152,6 +152,7 @@
                 android:id="@+id/h_logout_textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/recycler_color_selector"
                 android:drawableLeft="@drawable/ic_logout_grey_24dp"
                 android:drawablePadding="10dp"
                 android:drawableStart="@drawable/ic_logout_grey_24dp"
@@ -167,6 +168,7 @@
                 android:id="@+id/h_manage_contacts_textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/recycler_color_selector"
                 android:drawableLeft="@drawable/ic_manage_contacts_grey_24dp"
                 android:drawablePadding="10dp"
                 android:drawableStart="@drawable/ic_manage_contacts_grey_24dp"
@@ -182,6 +184,7 @@
                 android:id="@+id/h_synchronize_textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/recycler_color_selector"
                 android:drawableLeft="@drawable/ic_synchronize_grey_24dp"
                 android:drawablePadding="10dp"
                 android:drawableStart="@drawable/ic_synchronize_grey_24dp"
