--- a/splitemapp-android/res/layout/list_item_expense_category.xml
+++ b/splitemapp-android/res/layout/list_item_expense_category.xml
@@ -1,11 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     android:layout_marginTop="5dp"
-    android:background="@drawable/recycler_color_selector"
-    android:clickable="true"
-    android:focusable="true"
-    android:focusableInTouchMode="true"
     android:orientation="vertical"
     android:padding="5dp" >
 
@@ -13,8 +10,8 @@
         android:id="@+id/e_expense_category_icon_imageView"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:contentDescription="@string/e_category_description"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:contentDescription="@string/e_category_description" />
 
     <TextView
         android:id="@+id/e_expense_category_title_textView"
