--- a/splitemapp-android/res/layout/transparent_toolbar.xml
+++ b/splitemapp-android/res/layout/transparent_toolbar.xml
@@ -2,14 +2,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/semi_transparent"
     android:orientation="vertical" >
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/actionBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-5dp"
-        android:layout_marginBottom="-5dp"
+        android:layout_marginTop="-10dp"
+        android:layout_marginBottom="-10dp"
         app:contentInsetStart="0dp" >
 
         <RelativeLayout
