--- a/splitemapp-android/res/values/colors.xml
+++ b/splitemapp-android/res/values/colors.xml
@@ -16,5 +16,6 @@
     <color name="fabblue">#53A8FC</color>
     <color name="darkblue">#0088A1</color>
     <color name="transparent">#80FFFFFF</color>
+    <color name="semi_transparent">#88676767</color>
 
 </resources>
