SPLITEMAPP-50 Setting new toast shape and layout Setting toast background color as yellow Renaming other shapes to maintain a certain naming convention

--- a/splitemapp-android/res/layout/fragment_manage_contacts.xml
+++ b/splitemapp-android/res/layout/fragment_manage_contacts.xml
@@ -5,12 +5,12 @@
     android:background="@color/white"
     android:orientation="vertical" >
 
-    <include layout="@layout/blue_toolbar" />
+    <include layout="@layout/toolbar_blue" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="5dp"
-        android:background="@drawable/toolbar_dropshadow" />
+        android:background="@drawable/shape_toolbar_dropshadow" />
 
     <RelativeLayout
         android:layout_width="match_parent"
