--- a/splitemapp-android/res/layout/fragment_create_project.xml
+++ b/splitemapp-android/res/layout/fragment_create_project.xml
@@ -49,7 +49,7 @@
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="5dp"
-                        android:background="@drawable/toolbar_dropshadow" />
+                        android:background="@drawable/shape_toolbar_dropshadow" />
 
                     <TextView
                         style="@style/CustomTextView"
@@ -89,7 +89,7 @@
                 </LinearLayout>
             </LinearLayout>
 
-            <include layout="@layout/blue_toolbar" />
+            <include layout="@layout/toolbar_blue" />
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
