--- a/splitemapp-android/res/layout/fragment_expense.xml
+++ b/splitemapp-android/res/layout/fragment_expense.xml
@@ -51,7 +51,7 @@
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="5dp"
-                        android:background="@drawable/toolbar_dropshadow" />
+                        android:background="@drawable/shape_toolbar_dropshadow" />
 
                     <TextView
                         android:id="@+id/e_expense_date_textView"
@@ -68,7 +68,7 @@
                 </LinearLayout>
             </LinearLayout>
 
-            <include layout="@layout/blue_toolbar" />
+            <include layout="@layout/toolbar_blue" />
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
