--- a/splitemapp-android/res/values/styles.xml
+++ b/splitemapp-android/res/values/styles.xml
@@ -97,7 +97,7 @@
         <item name="android:paddingLeft">5dp</item>
         <item name="android:layout_marginLeft">10dp</item>
         <item name="android:layout_marginRight">10dp</item>
-        <item name="android:background">@drawable/spinner_background</item>
+        <item name="android:background">@color/white</item>
     </style>
 
     <style name="Button" parent="Theme.AppCompat">
