--- a/splitemapp-android/res/layout/fragment_settings.xml
+++ b/splitemapp-android/res/layout/fragment_settings.xml
@@ -52,9 +52,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="5dp"
                     android:layout_toEndOf="@id/s_avatar_imageView"
                     android:layout_toRightOf="@id/s_avatar_imageView"
                     android:background="@color/white"
@@ -62,22 +62,20 @@
                     android:padding="0dp"
                     android:text="@string/s_name"
                     android:textColor="@color/black"
-                    android:textSize="16sp" />
+                    android:textSize="20sp" />
 
                 <TextView
                     android:id="@+id/s_email_textView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/s_full_name_editText"
-                    android:layout_marginBottom="15dp"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="10dp"
                     android:layout_toEndOf="@id/s_avatar_imageView"
                     android:layout_toRightOf="@id/s_avatar_imageView"
                     android:text="@string/s_email"
-                    android:textColor="@color/grey"
-                    android:textSize="12sp" />
+                    android:textColor="@color/hard_grey"
+                    android:textSize="14sp" />
             </RelativeLayout>
 
             <TextView
