SPLITEMAPP-6 Fixing the notifications to take the text from the strings.xml file. Fixing the way we reference the preferences throughout the application. Taking back the change for list_item_project for the color of the lower separator

--- a/splitemapp-android/res/layout/list_item_project.xml
+++ b/splitemapp-android/res/layout/list_item_project.xml
@@ -107,7 +107,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_toEndOf="@id/h_project_cover_imageView"
                 android:layout_toRightOf="@id/h_project_cover_imageView"
-                android:background="@color/hard_grey" />
+                android:background="@color/grey" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
