--- a/splitemapp-android/res/layout/fragment_project.xml
+++ b/splitemapp-android/res/layout/fragment_project.xml
@@ -30,14 +30,14 @@
             android:id="@+id/p_project_title_textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/semi_transparent"
             android:layout_alignBottom="@id/p_project_cover_image_imageView"
-            android:paddingTop="2dp"
+            android:background="@color/semi_transparent"
             android:paddingBottom="2dp"
-            android:paddingLeft="10dp"
-            android:paddingStart="10dp"
-            android:paddingRight="10dp"
             android:paddingEnd="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingStart="10dp"
+            android:paddingTop="2dp"
             android:textColor="@color/white"
             android:textSize="28sp" />
     </RelativeLayout>
@@ -62,6 +62,7 @@
         android:layout_below="@id/imagelayout"
         android:layout_marginTop="50dp"
         android:drawableTop="@drawable/ic_money_grey_48dp"
+        android:gravity="center_horizontal"
         android:paddingLeft="40dp"
         android:paddingRight="40dp"
         android:text="@string/p_empty_list_hint"
