SPLITEMAPP-65 Fixing name of the color middle_grey and its references throughout the app Adding new ring shaped view Replacing background circle with ring-shaped view

--- a/splitemapp-android/res/layout/fragment_balance.xml
+++ b/splitemapp-android/res/layout/fragment_balance.xml
@@ -105,7 +105,7 @@
                     android:layout_height="80dp"
                     android:layout_below="@id/b_total_textView"
                     android:layout_centerHorizontal="true"
-                    android:background="@color/middle_gray" />
+                    android:background="@color/middle_grey" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
