--- a/splitemapp-android/res/drawable/shape_triangle_left.xml
+++ b/splitemapp-android/res/drawable/shape_triangle_left.xml
@@ -8,7 +8,7 @@
             android:pivotX="87%"
             android:pivotY="140%" >
             <shape android:shape="rectangle" >
-                <solid android:color="@color/middle_gray" />
+                <solid android:color="@color/middle_grey" />
             </shape>
         </rotate>
     </item>
