--- a/splitemapp-android/res/drawable/shape_triangle_right.xml
+++ b/splitemapp-android/res/drawable/shape_triangle_right.xml
@@ -8,7 +8,7 @@
             android:pivotX="13%"
             android:pivotY="-40%" >
             <shape android:shape="rectangle" >
-                <solid android:color="@color/middle_gray" />
+                <solid android:color="@color/middle_grey" />
             </shape>
         </rotate>
     </item>
