--- a/splitemapp-android/res/values/colors.xml
+++ b/splitemapp-android/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="background">#6C8296</color>
     <color name="black">#000000</color>
     <color name="grey">#E5E5E5</color>
-    <color name="middle_gray">#D8D8D8</color>
+    <color name="middle_grey">#D8D8D8</color>
     <color name="hard_grey">#878787</color>
     <color name="white">#FFFFFF</color>
     <color name="green">#90DD1E</color>
