--- a/splitemapp-android/res/values/colors.xml
+++ b/splitemapp-android/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="red">#FF0000</color>
     <color name="warning">#FDBD00</color>
     <color name="seablue">#4EA6FF</color>
+    <color name="barblue">#01A3CA</color>
     <color name="seagreen">#79C67E</color>
     <color name="strongblue">#1988A4</color>
     <color name="fabblue">#53A8FC</color>
