--- a/splitemapp-android/res/layout/fragment_balance.xml
+++ b/splitemapp-android/res/layout/fragment_balance.xml
@@ -135,7 +135,7 @@
                         android:textColor="@color/black"
                         android:textSize="18sp" />
                 </LinearLayout>
-                
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
@@ -167,6 +167,11 @@
                         android:textSize="18sp" />
                 </LinearLayout>
             </RelativeLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/b_expense_group_recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
         </LinearLayout>
     </ScrollView>
 
