SPLITEMAPP-65 Adding new option in the project screen to display the balance (probably will change this with a new chart icon somewhere) Adding new activity to the android manifest Updating ExpenseGroupAdapter to load the recycler view appropriately Updating BalanceFragment to use the proper fragment with blue toolbar

--- a/splitemapp-android/res/layout/fragment_balance.xml
+++ b/splitemapp-android/res/layout/fragment_balance.xml
@@ -59,7 +59,7 @@
                     android:orientation="vertical" >
 
                     <TextView
-                        android:id="@+id/b_month"
+                        android:id="@+id/b_monthTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/b_month_placeholder"
@@ -67,7 +67,7 @@
                         android:textSize="22sp" />
 
                     <TextView
-                        android:id="@+id/b_year"
+                        android:id="@+id/b_yearTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/b_year_placeholder"
