--- a/splitemapp-android/res/layout/list_item_expense_group.xml
+++ b/splitemapp-android/res/layout/list_item_expense_group.xml
@@ -1,81 +1,74 @@
-<!-- A CardView that contains a RelativeLayout -->
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="0dp"
-    app:cardElevation="0dp" >
+    android:background="@color/white"
+    android:paddingLeft="25dp"
+    android:paddingStart="25dp"
+    android:paddingRight="0dp"
+    android:paddingEnd="0dp" >
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="25dp"
-        android:layout_marginStart="25dp" >
+    <ImageView
+        android:id="@+id/b_icon_imageView"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_centerInParent="true"
+        android:layout_marginLeft="2dp"
+        android:layout_marginStart="2dp"
+        android:contentDescription="@string/b_icon_description"
+        android:padding="6dp"
+        android:src="@drawable/ic_category_food_48dp" />
 
-        <ImageView
-            android:id="@+id/b_icon_imageView"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:layout_marginLeft="2dp"
-            android:layout_marginStart="2dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_centerInParent="true"
-            android:contentDescription="@string/b_icon_description"
-            android:padding="6dp"
-            android:src="@drawable/ic_category_food_48dp" />
+    <View
+        android:id="@+id/b_circle_imageView"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_centerInParent="true"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/shape_ring" />
 
-        <View 
-            android:id="@+id/b_circle_imageView"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_centerInParent="true"
-            android:background="@drawable/shape_ring"/>
-        
-        <View
-            android:layout_width="0.5dp"
-            android:layout_height="60dp"
-            android:layout_toEndOf="@id/b_circle_imageView"
-            android:layout_toRightOf="@id/b_circle_imageView"
-            android:background="@color/middle_grey" />
+    <View
+        android:layout_width="0.5dp"
+        android:layout_height="50dp"
+        android:layout_toEndOf="@id/b_circle_imageView"
+        android:layout_toRightOf="@id/b_circle_imageView"
+        android:background="@color/middle_grey" />
 
-        <View
-            android:id="@+id/b_bar_view"
-            android:layout_width="170dp"
-            android:layout_height="30dp"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_toEndOf="@id/b_circle_imageView"
-            android:layout_toRightOf="@id/b_circle_imageView"
-            android:background="@color/barblue" />
+    <View
+        android:id="@+id/b_bar_view"
+        android:layout_width="170dp"
+        android:layout_height="30dp"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_toEndOf="@id/b_circle_imageView"
+        android:layout_toRightOf="@id/b_circle_imageView"
+        android:background="@color/barblue" />
 
-        <TextView
-            android:id="@+id/b_amount_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toEndOf="@id/b_bar_view"
-            android:layout_toRightOf="@id/b_bar_view"
-            android:text="@string/ue_amount_placeholder"
-            android:textColor="@color/middle_grey"
-            android:textSize="18sp" />
+    <TextView
+        android:id="@+id/b_amount_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@id/b_bar_view"
+        android:layout_toRightOf="@id/b_bar_view"
+        android:text="@string/ue_amount_placeholder"
+        android:textColor="@color/middle_grey"
+        android:textSize="18sp" />
 
-        <TextView
-            android:id="@+id/b_percent_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toEndOf="@id/b_amount_textView"
-            android:layout_toRightOf="@id/b_amount_textView"
-            android:text="@string/b_percent"
-            android:textColor="@color/middle_grey"
-            android:textSize="18sp" />
-    </RelativeLayout>
+    <TextView
+        android:id="@+id/b_percent_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@id/b_amount_textView"
+        android:layout_toRightOf="@id/b_amount_textView"
+        android:text="@string/b_percent"
+        android:textColor="@color/middle_grey"
+        android:textSize="18sp" />
 
-</android.support.v7.widget.CardView>
+</RelativeLayout>
