Adding new method to the database helper to handle expenses by project monthly Handling click listeners on the balance fragment to set month before-after

--- a/splitemapp-android/res/layout/fragment_balance.xml
+++ b/splitemapp-android/res/layout/fragment_balance.xml
@@ -44,6 +44,7 @@
                 android:orientation="horizontal" >
 
                 <ImageView
+                    android:id="@+id/b_left_arrow_imageView"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_gravity="center_vertical"
@@ -77,6 +78,7 @@
                 </LinearLayout>
 
                 <ImageView
+                    android:id="@+id/b_right_arrow_imageView"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_gravity="center_vertical"
